style: run formatter
